force-app/main/default/objects/Funding_Opportunity__c/Funding_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Grant types and sponsors that the organization pursues</description>
    <label>Funding Opportunity</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>