force-app/main/default/objects/Funding_Opportunity__c/fields/Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Type__c</fullName>
    <description>Grant mechanism (R01, R21, K08, etc.)</description>
    <label>Award Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>