force-app/main/default/objects/Funding_Opportunity__c/fields/Funding_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Funding_Mechanism__c</fullName>
    <description>Mechanism category (Research Project, Career Development, etc.)</description>
    <label>Funding Mechanism</label>
    <length>100</length>
    <type>Text</type>
</CustomField>