force-app/main/default/objects/Funding_Opportunity__c/fields/Max_Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Max_Direct_Costs__c</fullName>
    <description>Maximum direct costs in USD</description>
    <label>Max Direct Costs (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>