force-app/main/default/objects/Funding_Opportunity__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Unique identifier for import/upsert (e.g. OPP-001)</description>
    <externalId>true</externalId>
    <label>Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>