force-app/main/default/objects/Funding_Opportunity__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <description>Funding sponsor (NIH, AHRQ, PCORI, etc.)</description>
    <label>Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>