force-app/main/default/objects/Funding_Opportunity__c/fields/Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Type__c</fullName>
    <label>Sponsor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Subcontract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>