force-app/main/default/objects/Funding_Opportunity__c/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <description>Historical success rate (e.g. 29%)</description>
    <label>Success Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>